<resources>
    <string name="app_name">Om Sai Finance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OmSai Finance</string>
    <string name="nav_header_subtitle">Finance For Bikes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_documents">My Docs</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_requestloan">My Loans</string>
    <string name="menu_paymyloans">Pay MyLoans</string>
    <string name="menu_requeststatus">Request Status</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_emi">EMI Calculator</string>
    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_payment">Pay Emi</string>
    <string name="title_notifications">Notifications</string>
    <string name="item_namelot_of_so_somany_names_that_appear_to_be_there_is_no_there_is_no_way">Item NameLot of so somany names that appear to be there is no there is no way</string>
    <string name="cost_in_millions">Cost (in millions)</string>
    <string name="year">Year</string>

    <string name="balance">0</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="communicate">Communicate</string>
    <string name="select_course_by_gfg">Select Course by GFG</string>
    <string name="title_activity_noc">NocActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fc">Fc_Activity</string>
</resources>
