<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/my_loans"
            android:title="@string/menu_requestloan" />
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/coin"-->
<!--            android:title="@string/menu_paymyloans" />-->
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/status"
            android:title="@string/menu_requeststatus" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

<!--    <item android:title="@string/communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--            <item-->
<!--                android:id="@+id/emi_calculators"-->
<!--                android:icon="@drawable/emi"-->
<!--                android:title="@string/menu_emi" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>